# kmm-web

./: .dockerignore  .env  .env.docker  .env.example  .env.local.example  .env.production.example  .gitignore  ALPINE_JS_COMPLETE_REMOVAL.md  ALPINE_JS_REMOVAL_SUMMARY.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  QUICK_START.md  README.md  SETTINGS_ARCHITECTURE.md  SETTINGS_CHANGELOG.md  SETTINGS_CHECKLIST.md  SETTINGS_QUICK_REFERENCE.md  SETTINGS_REORGANIZATION.md  deploy.sh  docker-compose.yml  docker-deploy.sh  docker-entrypoint.sh  gunicorn.conf.py  kmm-web.service  kmm_data.csv  main.py  manage.py  pyproject.toml  test-dependencies.sh  test-docker-setup.sh  test_guardian_implementation.py  test_templates.py  test_vite_output.py  validate-deployment.sh
data_management/: __init__.py  admin.py  apps.py  forms.py  health_checks.py  middleware.py  models.py  signals.py  test_auth_redirect_middleware.py  test_htmx_login.py  test_logout.py  test_password_reset.py  test_password_reset_confirm.py  test_staff_student_creation.py  test_student_creation.py  urls.py  views.py
data_management/migrations/: 0001_initial.py  0002_alter_student_photo.py  0003_alter_student_email_membership.py  0004_rename_dorm_location_student_home_location_and_more.py  0006_student_user.py  0008_alter_student_level.py  (+13 more)
kmm_web_backend/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
student_card/: apps.py  views.py
templates/: base.html  navbar.html  sidebar.html
vite/: views.py
(+47 files in other folders)
